--- a/02-Quantum_Flip/sol/rev_mt2.ipynb
+++ b/02-Quantum_Flip/sol/rev_mt2.ipynb
@@ -629,9 +629,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.6",
-   "language": "sage",
-   "name": "sagemath-9.6"
+   "display_name": "Python 3.9.6 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -643,7 +643,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
+   }
   }
  },
  "nbformat": 4,
